# omwmm

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  omwmm.toml
include/: omwmm.hpp
include/omwmm/: config.hpp  exceptions.hpp  extractor.hpp  modmanager.hpp  test.hpp
src/: main.cpp
src/cli/: main.cpp  main.hpp
src/omwmm/: config.cpp  exceptions.cpp  extractor.cpp  modmanager.cpp  test.cpp
